# crewaitesting

./: CVeditor.ipynb  ContentCreation.ipynb  ObjectiveJournalist.ipynb  README.md  ResearcherCrew.ipynb  investor.ipynb  pyproject.toml  resume.tex  stock_market_report.json  stock_market_report.md  updated_resume.tex
production_level/: README.md  pyproject.toml  report.md
production_level/src/production_level/: crew.py  main.py
yaml/: agents.yaml  tasks.yaml
