[project]
name = "crewaitesting"
version = "0.1.0"
description = ""
authors = [
    {name = "p3rc1va1",email = "35celik.baha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9, <=3.13.2"
dependencies = [
    "crewai (>=0.157.0,<0.158.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "langchain-google-genai (>=2.1.9,<3.0.0)",
    "crewai-tools (>=0.60.0,<0.61.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "pylatexenc (>=2.10,<3.0)",
    "texsoup (>=0.3.1,<0.4.0)"
]

[tool.poetry]
packages = [{include = "crewaitesting", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
