[project]
name = "production_level"
version = "0.1.0"
description = "production_level using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai (>=0.186.1,<0.187.0)"
]

[project.scripts]
production_level = "production_level.main:run"
run_crew = "production_level.main:run"
train = "production_level.main:train"
replay = "production_level.main:replay"
test = "production_level.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
